+ Added: [Suggestion] %lands_land_category% PAPI placeholder
+ Added: You can now use #hexText instead of {#hex}Text