@@ -1,2 +1,3 @@
-+ Added: [Suggestion] %lands_land_category% PAPI placeholder
-+ Added: You can now use #hexText instead of {#hex}Text
++ Added: /wars list - opens menu with active wars
++ Improved: Handling of tousands of land updates via Redis. This is important for upkeep, taxes etc.
+where almost always all lands are altered
